# next_graph

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: main_benchmark.rs
benches/graph_csm_benches/: csm_benches.rs  csm_par_benches.rs  mod.rs
benches/graph_dyn_benches/: dyn_benches.rs  mod.rs
docs/: README_OLD.md
src/: error.rs  lib.rs
src/errors/: graph_error.rs  mod.rs
src/extensions/: graph_algo_ext.rs  graph_algo_par.rs  mod.rs
src/traits/: graph_algo.rs  graph_algo_par.rs  graph_evolution.rs  graph_freeze.rs  graph_mut.rs  graph_view.rs  mod.rs
src/types/: mod.rs
src/types/graph_csm/: graph_algo.rs  graph_csm_algo.rs  graph_csm_dfs_utils.rs  graph_csm_unfreeze.rs  graph_csm_view.rs  graph_dfs_utils.rs  graph_traversal.rs  graph_unfreeze.rs  graph_view.rs  mod.rs
src/types/graph_dynamic/: graph_freeze.rs  graph_mut.rs  graph_view.rs  mod.rs
src/utils_test/: gen_utils.rs  mod.rs
tests/: error_tests.rs  mod.rs
tests/errors/: graph_error_tests.rs  mod.rs
tests/extensions/: graph_algo_par_ext_tests.rs  mod.rs
tests/types/: mod.rs
tests/types/graph_csm/: graph_csm_algo_tests.rs  graph_csm_tests.rs  graph_csm_unfreeze_tests.rs  graph_csm_view_tests.rs  graph_traversal_tests.rs  mod.rs
tests/types/graph_dynamic/: graph_dyn_dynamic_tests.rs  graph_dyn_freeze_tests.rs  graph_dyn_mut_tests.rs  graph_dyn_tests.rs  graph_dyn_view_tests.rs  graph_freeze_tests.rs  mod.rs
